fix bottom menu horizontal scroll

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -188,7 +188,6 @@ body {
       .sub-menu {
         height: 400px;
         max-width: 100%;
-        top: 100%;
       }
     }
 
@@ -252,7 +251,7 @@ body {
 
   .sub-menu {
     position: absolute;
-    top: calc(100% - 5px);
+    top: 100%;
     right: 0;
     z-index: 999;
     width: 700px;
@@ -269,6 +268,18 @@ body {
     transform: translateY(10px);
     transition: all 300ms ease-in-out;
     color: $black;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+    
+    &::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+  
+    &::-webkit-scrollbar-thumb {
+      background: var(--mainColor);
+    }
 
     &__heading {
       font-size: 1rem;
@@ -1160,6 +1171,19 @@ body .add-to-cart-btn {
   padding-bottom: 5px;
   background-color: $white;
   box-shadow: 0px 5px 20px 5px rgba(0, 0, 0, 0.05);
+  overflow-x: auto;
+
+  &::-webkit-scrollbar {
+    height: 5px;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #000;
+  }
 
   ul {
     width: 100%;
